--- a/DotnetContainers/Dockerfile
+++ b/DotnetContainers/Dockerfile
@@ -6,19 +6,17 @@ EXPOSE 80
 EXPOSE 443
 EXPOSE 2222
 
-
-
-
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
 COPY ["DotnetContainers/DotnetContainers.csproj", "DotnetContainers/"]
 RUN dotnet restore "DotnetContainers/DotnetContainers.csproj"
 COPY . .
 WORKDIR "/src/DotnetContainers"
-RUN dotnet build "DotnetContainers.csproj" -c Release -o /app/build
+RUN dotnet build "DotnetContainers.csproj" -c Debug -o /app/build
+RUN curl -sSL https://aka.ms/getvsdbgsh | bash /dev/stdin -v vs2019 -l /app/vsdbg
 
 FROM build AS publish
-RUN dotnet publish "DotnetContainers.csproj" -c Release -o /app/publish
+RUN dotnet publish "DotnetContainers.csproj" -c Debug -o /app/publish
 
 FROM base AS final
 
@@ -39,5 +37,6 @@ RUN chmod -R +x /tmp/ssh_setup.sh \
 
 WORKDIR /app
 COPY --from=publish /app/publish .
+COPY --from=publish /app/vsdbg /vsdbg
 
 ENTRYPOINT ["/bin/init_container.sh"]
